# OpenSim_RA

./: .gitignore  CMakeCache.txt  CMakeLists.txt  EllipsoidWrapping_states.sto  Normal_Wrapping_states.sto  PythonTest.py  README.md  computeOpenSimDerivatives.m  runEllipsoidTest.py  runWrappingSpeed.py  runWrappingSpeedDCC.py  runWrappingSurfaces.py
Analytical_wrapping/: CMakeLists.txt  analyticalSolution.cpp  analyticalSolution.h  buildModel.cpp  buildModelDouble.cpp  buildModelHorizontal.cpp  buildModelPathPoints.cpp  main.cpp  modelParameters.h  testCase.h  test_suite.cpp
Analytical_wrapping/analytical_solutions/: path_points_symbolic.m
Analytical_wrapping/path_point_plotting/: data.m  outputFile.txt  plotData.m  plotDataMuscleLength.m
Analytical_wrapping/path_point_plotting/data_saves/: outputFile.txt  outputFileTendonSlackLength.txt  outputFileWrap.txt
Analytical_wrapping/tests/: test_a.h
Cables/: CMakeLists.txt  Cables_test.cpp
Images/DCC/: data.txt
Integration/: main.m
Integration/CPodesIntegration/: CMakeLists.txt  Rajagopal_2015.osim  main.cpp  results.txt
Integration/CPodesIntegration/old_results/: solver_results.txt
Integration/DifferentIntegration/: CMakeLists.txt
Integration/ForwardTool/: CMakeLists.txt  main.cpp  solver_results.txt
Integration/ImplicitIntegration/: CMakeLists.txt  OpenSimInMatlab.m  main.m
Interpolation/: CMakeLists.txt  Interpolate.cpp  Interpolate.h  bernsteinPolynomials.m  interp.cpp  interp.h  main.cpp  main.m  mainAdam.cpp  newfile1.lyx  plot.py  results.txt  testCase.h  testCaseDer.h  zip
Interpolation/Matlab/: returnLength.m
Interpolation/MultidimensionalCubicBSpline_v1.0/Code/build-cppTest-Desktop-Default/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake  testSpline
Interpolation/MultidimensionalCubicBSpline_v1.0/Code/cppTest/: CMakeLists.txt  SplineData.cpp  SplineDataNew.cpp  SplineDataNew.h  testSpline.cpp
Interpolation/MultidimensionalCubicBSpline_v1.0/Code/src/: Spline.cpp
Interpolation_CBS/Code/cppTest/: SplineData.cpp  SplineData.h
Interpolation_CBS/Joris/: CMakeLists.txt  Spline.cpp  SplineData.cpp  SplineData.h  main.cpp
Interpolation_CBS/build-Code-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  multidimensionalcubicbspline.cbp
Interpolation_CBS/build-Code-Desktop-Default/cppTest/: Makefile  cmake_install.cmake  testSpline
Interpolation_MTU/: CMakeLists.txt  MTUSplineDataRead.cpp  MTUSplineDataRead.h  MTUSplineInterface.cpp  MTUSplineInterface.h  MuscleAnalyseForSpline.h  helperFunctions.h  main.cpp
Interpolation_test/: CMakeLists.txt  main.cpp  tests.h
Interpolation_test/test_data/: fbp_20_hopper.m  fbp_40_arm.m  fbp_5_hopper.m  fbp_80_arm.m  plotting.m
Interpolation_tool/: CMakeLists.txt  main.cpp  tests.h
MatlabODETests/: IntegrateOpenSimPlant.m  OpenSimPlantFunction.m  computeOpenSimDerivatives.m  main.m  makeModel.m  results.txt  results.txt.txt
Moment_arm/: CMakeLists.txt  Rajagopal_2015_no_wrapping.osim  main.cpp
Moment_arm/results/: assocs_no_wrapping  assocs_wrapping  coords_no_wrapping  coords_wrapping
OpenSim_Interpolation/: CMakeLists.txt  Rajagopal_2015Joris.osim  main.cpp
Random_tests/: CMakeLists.txt  FunctionBasedPath.h  GeometryPath.h  PathActuator.h  PointBasedPath.h  main.cpp
Wrapping_analytical/: buildModel.cpp  buildModelDouble.cpp  buildModelHorizontal.cpp  testCase.h
Wrapping_analytical/analytical_solutions/: analytical_wrapping_2.m  path_points_symbolic.m
Wrapping_analytical/path_point_plotting/: data.m  plotDataDiscretization.m
Wrapping_analytical/path_point_plotting/data_saves/: outputs4.txt
Wrapping_cables/: Cables_Simbody_demo.cpp
Wrapping_speed/: CMakeLists.txt  buildModel.cpp  buildModelDCC.cpp  main.cpp  testCase.h
Wrapping_surfaces/: CMakeLists.txt  buildHopperModel.cpp  exampleHopperDevice.cpp  results.txt
Wrapping_surfaces/Arm26/: arm26_wrapTest.osim
Wrapping_surfaces/Ellipsoid_test/: CMakeLists.txt  analyticalSolution.cpp  analyticalSolution.h  buildModel.cpp  buildModelOld.cpp  main.cpp  testCase.h
Wrapping_surfaces/Hopper/: buildHopperModel.cpp  main.cpp
Wrapping_surfaces/WrappingSurfaces/: CMakeLists.txt  buildModel.cpp  main.cpp  testCase.h
models/: Hopper.osim
models/ArmSwing/Results/: arm26_controls.sto  arm26_states.sto  arm26_states_degrees.mot
models/RajagopalModel/: R_left.osim
scripts/: data_arm26.m  data_hopper.m  extract_cycles_from_stats  linux_build  linux_configure  plot_arm26.m  plot_arm26.m~  plot_cylinder_angle_vs_cycles  plot_hopper.m  stats_per_angle
